--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 Copy-right 2014
 <!DOCTYPE html>
 <head>
-	<title>An example website</title>
+	<title>A very respectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,11 +15,11 @@ Copy-right 2014
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Im not sure
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Pradeep 2014</p>
 	</footer>
 </body>
 </html>
