before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 Copy-right 2014
 <!DOCTYPE html>
+Adding changes before rebaseing conflicts
 <head>
 	<title>An Great website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
