conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 Copy-right 2014
 <!DOCTYPE html>
-Adding changes before rebaseing conflicts
+SOme changes
 <head>
 	<title>An Great website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -17,6 +17,7 @@ Adding changes before rebaseing conflicts
 	<!-- Content Goes Here -->
 		<p>
 			Im not sure
+			lets see what happens
 		</p>
 	</main>
 	<footer class="container">
