--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@ Copy-right 2014
 <!DOCTYPE html>
 SOme changes
 <head>
-	<title>An Great website</title>
+	<title>Lots of trouble in the little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
