Done with simple.html changes

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@ Cool
 <!DOCTYPE html>
 SOme changes
 <head>
-	<title>Lots of trouble in the little repo</title>
+	<title>Updating title for stashing</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
